Tidying up.  Using properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,9 @@ management.endpoint.camelroutes.read-only = true
 # 1.  t2a : tracker to aggregate demo server
 dhis2.t2a.host = t2a.dhis2.org
 dhis2.t2a.path = /demo
-dhis2.t2a.user = xxx
-dhis2.t2a.pwd = xxx
+dhis2.t2a.user = bob
+dhis2.t2a.pwd = district
+dhis2.t2a.pIgroup = ShLDZIE0Cwa
+dhis2.t2a.pool = 20
+
+
