--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ dhis2.t2a.host = t2a.dhis2.org
 dhis2.t2a.path = /demo
 dhis2.t2a.user = bob
 dhis2.t2a.pwd = district
-dhis2.t2a.pIgroup = ShLDZIE0Cwa
+dhis2.t2a.PIGroup = ShLDZIE0Cwa
 dhis2.t2a.pool = 20
 
 
