Refactoring routes and processors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,7 @@ management.endpoint.camelroutes.read-only = true
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
 
+#  TODO: get these from external properties file
 # DHIS2 hosts
 # 1.  t2a : tracker to aggregate demo server
 dhis2.t2a.host = t2a.dhis2.org
@@ -38,6 +39,6 @@ dhis2.t2a.path = /demo
 dhis2.t2a.user = bob
 dhis2.t2a.pwd = district
 dhis2.t2a.PIGroup = ShLDZIE0Cwa
-dhis2.t2a.pool = 20
+dhis2.t2a.pool = 5
 
 
